--- a/app/src/main/res/layout/navdrawer.xml
+++ b/app/src/main/res/layout/navdrawer.xml
@@ -14,15 +14,19 @@
 				android:layout_height="wrap_content"
 				android:text="@string/ic_computer"
 				android:textSize="30dp"
-				android:layout_alignParentTop="true"
-				android:layout_alignParentRight="true"
 				android:background="@drawable/bg_selectable"
 				android:maxHeight="48dp"
-				android:padding="0dp"/>
+				android:layout_alignParentTop="true"
+				android:layout_alignParentRight="true"
+				android:layout_alignParentEnd="true"
+				android:paddingTop="4dp"
+				android:paddingBottom="6dp"
+				android:paddingRight="8dp"
+				android:paddingLeft="8dp"/>
 
 		<View style="@style/NavigationDrawer.DividerV" android:id="@+id/divider2"
 			  android:layout_centerVertical="true"
-			  android:layout_alignLeft="@+id/change_host"/>
+			  android:layout_toLeftOf="@+id/change_host" />
 		<TextView
 				style="@style/NavigationDrawer.text"
 				android:id="@+id/current_host"
