--- a/app/src/main/res/layout/navdrawer_item_expandable.xml
+++ b/app/src/main/res/layout/navdrawer_item_expandable.xml
@@ -35,7 +35,7 @@
 			android:layout_width="48dp"
 			android:layout_height="wrap_content"
 			android:background="@null"
-			android:layout_alignParentTop="true"
+			android:layout_centerVertical="true"
 			android:layout_alignParentRight="true"
 			tools:ignore="SpUsage"/>
 
