--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,31 +4,19 @@
 				android:layout_height="match_parent"
 				android:background="@color/light_bg">
 
-	<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="180dp"
-			android:textColor="@color/light_tertiary_text"
-			android:text="@string/ic_logo"
-			android:id="@+id/logo"
-			android:layout_alignParentTop="true"
-			android:layout_centerHorizontal="true"
-			android:layout_marginTop="16dp"/>
+	<TextView style="@style/PageLogo"
+			  android:id="@+id/logo"
+			  android:text="@string/ic_logo" />
 
 	<TextView style="@style/WizardPageTitle" android:text="@string/welcome_title"
-			  android:id="@+id/textView3"
+			  android:id="@+id/title"
 			  android:layout_below="@+id/logo"
 			  android:layout_alignParentRight="true"
 			  android:layout_alignParentEnd="true"
-			  android:layout_marginTop="16dp"
-			  android:layout_marginLeft="16dp"
-			  android:layout_marginRight="16dp"/>
-	<TextView style="@style/Paragraph" android:text="@string/welcome_text"
-			  android:id="@+id/textView2"
-			  android:layout_below="@+id/textView3"
-			  android:layout_marginLeft="16dp"
-			  android:layout_marginRight="16dp"/>
+			  android:layout_marginTop="16dp"/>
 
+	<TextView style="@style/Paragraph" android:text="@string/welcome_text"
+			  android:layout_below="@+id/title"/>
 
 	<View
 			android:id="@+id/divider"
