--- a/app/src/main/res/values-xlarge-land/dimens.xml
+++ b/app/src/main/res/values-xlarge-land/dimens.xml
@@ -19,9 +19,12 @@
   -->
 <resources>
 
-	<!-- Sliding Menu -->
+	<!-- Cards -->
 	<dimen name="square_compact_width">161dp</dimen>
 	<dimen name="portrait_compact_width">161dp</dimen>
 	<dimen name="portrait_compact_height">238dp</dimen>
+
+	<!-- Generic Layout -->
+	<dimen name="small_content_horizontal_padding">320dp</dimen>
 
 </resources>
