--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,9 @@
 	<color name="navdrawer_bg">#1c1c1c</color>
 	<color name="navdrawer_textcolor">#1c1c1c</color>
 
+	<color name="step_pager_previous_tab_color">#4433b5e5</color>
+	<color name="step_pager_selected_tab_color">#ff0099cc</color>
+	<color name="step_pager_selected_last_tab_color">#ff669900</color>
+	<color name="step_pager_next_tab_color">#10000000</color>
+
 </resources>
