--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,7 +43,7 @@
 	<!-- The navigation drawer -->
 	<fragment
 		android:id="@+id/left_drawer"
-		android:layout_width="@dimen/slidingmenu_width"
+		android:layout_width="@dimen/navdrawer_width"
 		android:layout_height="match_parent"
 		android:layout_gravity="start"
 		android:name="org.xbmc.android.app.ui.menu.NavigationDrawerFragment" />
