--- a/app/src/main/res/values-large-land/dimens.xml
+++ b/app/src/main/res/values-large-land/dimens.xml
@@ -19,6 +19,9 @@
   -->
 <resources>
 
+	<!-- Navigation Drawer -->
+	<dimen name="navdrawer_width">200dp</dimen>
+
 	<!-- Generic Layout -->
 	<dimen name="small_content_horizontal_padding">240dp</dimen>
 
