--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,8 @@
 			<LinearLayout
 				android:layout_height="wrap_content"
 				android:layout_width="wrap_content"
-				android:orientation="vertical">
+				android:orientation="vertical"
+				android:paddingBottom="16dp">
 
 				<fragment
 					android:id="@+id/home_music_fragment"
