--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <android.support.v4.widget.DrawerLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/drawer_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
@@ -12,7 +13,15 @@
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent">
 
+		<fragment
+				android:id="@+id/refresh_notice_fragment"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:name="org.xbmc.android.app.ui.fragment.RefreshNoticeFragment"
+				tools:layout="@layout/fragment_refresh_notice"/>
+
 		<ScrollView
+			android:id="@+id/scrollview"
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent"
 			android:background="@color/light_bg">
@@ -24,14 +33,14 @@
 				android:paddingBottom="16dp">
 
 				<fragment
-					android:id="@+id/home_music_fragment"
+					android:id="@+id/music_fragment"
 					android:name="org.xbmc.android.app.ui.fragment.AlbumCompactFragment"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					tools:layout="@layout/list_item_album_compact"/>
 
 				<fragment
-					android:id="@+id/home_movie_fragment"
+					android:id="@+id/movie_fragment"
 					android:name="org.xbmc.android.app.ui.fragment.MovieCompactFragment"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
@@ -47,7 +56,8 @@
 		android:layout_width="@dimen/navdrawer_width"
 		android:layout_height="match_parent"
 		android:layout_gravity="start"
-		android:name="org.xbmc.android.app.ui.menu.NavigationDrawerFragment" />
+		android:name="org.xbmc.android.app.ui.menu.NavigationDrawerFragment"
+		tools:layout="@layout/navdrawer"/>
 
 </android.support.v4.widget.DrawerLayout>
 
