--- a/app/src/main/res/layout-xlarge-land/activity_home.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_home.xml
@@ -22,12 +22,20 @@
 
 			<LinearLayout
 					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
+					android:layout_width="fill_parent"
 					android:orientation="horizontal"
-					android:baselineAligned="false">
+					android:baselineAligned="false"
+					android:paddingBottom="16dp">
 
 				<fragment
-						android:id="@+id/home_music_fragment"
+						android:id="@+id/refresh_notice_fragment"
+						android:layout_width="fill_parent"
+						android:layout_height="fill_parent"
+						android:name="org.xbmc.android.app.ui.fragment.RefreshNoticeFragment"
+						tools:layout="@layout/fragment_refresh_notice"/>
+
+				<fragment
+						android:id="@+id/music_fragment"
 						android:name="org.xbmc.android.app.ui.fragment.AlbumCompactFragment"
 						android:layout_width="0dp"
 						android:layout_weight="1"
@@ -35,7 +43,7 @@
 						tools:layout="@layout/list_item_album_compact"/>
 
 				<fragment
-						android:id="@+id/home_movie_fragment"
+						android:id="@+id/movie_fragment"
 						android:name="org.xbmc.android.app.ui.fragment.MovieCompactFragment"
 						android:layout_width="0dp"
 						android:layout_weight="1"
