--- a/app/src/main/res/layout/list_item_movie_compact.xml
+++ b/app/src/main/res/layout/list_item_movie_compact.xml
@@ -20,7 +20,7 @@
 			android:layout_height="@dimen/portrait_compact_height">
 
 		<ImageView
-				android:id="@+id/list_movie_poster"
+				android:id="@+id/poster"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_alignParentLeft="true"
@@ -34,7 +34,7 @@
 
 	<TextView
 			android:text="title_movie"
-			android:id="@+id/title_movie"
+			android:id="@+id/title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_below="@id/thumb_wrapper"
@@ -55,7 +55,7 @@
 			android:id="@+id/title_genre"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/title_movie"
+			android:layout_below="@id/title"
 			android:layout_alignParentLeft="true"
 			android:layout_marginLeft="5dp"
 			android:layout_marginBottom="5dp"
