--- a/app/src/main/res/layout/list_item_movie_wide.xml
+++ b/app/src/main/res/layout/list_item_movie_wide.xml
@@ -41,6 +41,7 @@
 			android:layout_toRightOf="@+id/thumb_wrapper"
 			android:layout_marginTop="5dp"
 			android:layout_marginLeft="10dp"
+			android:paddingRight="35dp"
 			android:textColor="@color/light_primary_text"
 			android:textSize="20sp"
 			android:fontFamily="sans-serif-light"
@@ -88,5 +89,18 @@
 			android:textSize="18dp"
 			android:layout_marginBottom="10dp"
 			tools:ignore="HardcodedText,SpUsage"/>
+
+	<ImageButton
+			android:id="@+id/overflow"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/ic_overflow"
+			android:layout_alignParentTop="true"
+			android:layout_alignRight="@+id/runtime"
+			android:layout_alignEnd="@+id/runtime"
+			android:contentDescription="@string/more"
+			android:background="@android:color/transparent"
+			android:cropToPadding="false"
+			android:paddingTop="8dp" />
 
 </RelativeLayout>
