--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,7 +33,8 @@
 	<dimen name="portrait_compact_height">170dp</dimen>
 
 	<!-- Generic Layout -->
-	<dimen name="small_content_horizontal_padding">16dp</dimen>
+	<dimen name="media_content_hpadding">12dp</dimen>
+	<dimen name="small_content_hpadding">16dp</dimen>
 	<dimen name="list_item_padding_left">6dp</dimen>
 	<dimen name="list_item_padding_right">6dp</dimen>
 	<dimen name="list_item_height_small">48dp</dimen>
