--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -5,7 +5,17 @@
 			  android:layout_height="fill_parent"
 			  android:background="@color/light_bg">
 
-	<ListView
+	<com.astuetz.PagerSlidingTabStrip
+			android:id="@+id/tabs"
+			android:layout_width="match_parent"
+			android:layout_height="48dip" />
+
+	<android.support.v4.view.ViewPager
+			android:id="@+id/pager"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent" />
+
+	<!--ListView
 			android:id="@+id/list_movies"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
@@ -18,7 +28,7 @@
 			android:fastScrollAlwaysVisible="true"
 			android:scrollbarStyle="outsideInset">
 
-	</ListView>
+	</ListView-->
 
 </LinearLayout>
 
