--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -23,6 +23,8 @@
 	<dimen name="square_compact_width">138dp</dimen>
 	<dimen name="portrait_compact_width">138dp</dimen>
 	<dimen name="portrait_compact_height">204dp</dimen>
+	<dimen name="portrait_wide_width">96dp</dimen>
+	<dimen name="portrait_wide_height">142dp</dimen>
 
 	<!-- Generic Layout -->
 	<dimen name="small_content_hpadding">32dp</dimen>
