--- a/app/src/main/res/layout/list_item_movie_wide.xml
+++ b/app/src/main/res/layout/list_item_movie_wide.xml
@@ -1,106 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				xmlns:tools="http://schemas.android.com/tools"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="6dp"
-				android:layout_marginRight="6dp"
-				android:layout_marginTop="6dp"
-				android:layout_marginBottom="6dp"
-				android:background="@drawable/bg_card"
-				android:paddingBottom="2dp"
-				android:paddingLeft="0dp"
-				android:paddingTop="0dp"
-				android:paddingRight="10dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:layout_marginLeft="6dp"
+	android:layout_marginRight="6dp"
+	android:layout_marginTop="6dp"
+	android:layout_marginBottom="6dp"
+	android:background="@drawable/bg_card"
+	android:paddingBottom="2dp"
+	android:paddingLeft="0dp"
+	android:paddingTop="0dp"
+	android:paddingRight="0dp">
 
 	<RelativeLayout
-			android:id="@+id/thumb_wrapper"
-			android:layout_width="@dimen/portrait_wide_width"
-			android:layout_height="@dimen/portrait_wide_height">
+		android:id="@+id/thumb_wrapper"
+		android:layout_width="@dimen/portrait_wide_width"
+		android:layout_height="@dimen/portrait_wide_height">
 
 		<ImageView
-				android:id="@+id/poster"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_alignParentLeft="true"
-				android:layout_alignParentTop="true"
-				android:adjustViewBounds="true"
-				android:scaleType="centerCrop"
-				android:contentDescription="@string/poster" />
+			android:id="@+id/poster"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_alignParentLeft="true"
+			android:layout_alignParentTop="true"
+			android:adjustViewBounds="true"
+			android:scaleType="centerCrop"
+			android:contentDescription="@string/poster" />
 
 	</RelativeLayout>
 
 	<TextView
-			android:id="@+id/title"
-			android:text="title"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignTop="@+id/thumb_wrapper"
-			android:layout_toRightOf="@+id/thumb_wrapper"
-			android:layout_marginTop="5dp"
-			android:layout_marginLeft="10dp"
-			android:paddingRight="35dp"
-			android:textColor="@color/light_primary_text"
-			android:textSize="@dimen/portrait_wide_title"
-			android:fontFamily="sans-serif-light"
-			android:maxLines="@integer/wide_item_title_lines"
-			android:ellipsize="marquee"
-			tools:ignore="HardcodedText"/>
+		android:id="@+id/title"
+		android:text="title"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignTop="@+id/thumb_wrapper"
+		android:layout_toRightOf="@+id/thumb_wrapper"
+		android:layout_marginTop="5dp"
+		android:layout_marginLeft="10dp"
+		android:paddingRight="35dp"
+		android:textColor="@color/light_primary_text"
+		android:textSize="@dimen/portrait_wide_title"
+		android:fontFamily="sans-serif-light"
+		android:maxLines="@integer/wide_item_title_lines"
+		android:ellipsize="marquee"
+		tools:ignore="HardcodedText"/>
 
 	<TextView
-			android:id="@+id/genres"
-			android:text="genres"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignLeft="@+id/title"
-			android:layout_below="@+id/title"
-			android:textSize="@dimen/portrait_wide_subtitle"
-			android:textColor="@color/light_secondry_text"
-			android:fontFamily="sans-serif-light"
-			android:maxLines="@integer/wide_item_subtitle_lines"
-			android:ellipsize="marquee"
-			tools:ignore="HardcodedText"/>
+		android:id="@+id/genres"
+		android:text="genres"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignLeft="@+id/title"
+		android:layout_below="@+id/title"
+		android:textSize="@dimen/portrait_wide_subtitle"
+		android:textColor="@color/light_secondry_text"
+		android:fontFamily="sans-serif-light"
+		android:maxLines="@integer/wide_item_subtitle_lines"
+		android:ellipsize="marquee"
+		tools:ignore="HardcodedText"/>
 
 
 	<TextView
-			android:id="@+id/runtime"
-			android:text="runtime"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textColor="@color/light_secondry_text"
-			android:textSize="@dimen/portrait_wide_subtitle"
-			android:fontFamily="sans-serif-light"
-			android:maxLines="1"
-			android:layout_alignParentRight="true"
-			android:layout_alignBottom="@+id/rating"
-			tools:ignore="HardcodedText"/>
+		android:id="@+id/runtime"
+		android:text="runtime"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:textColor="@color/light_secondry_text"
+		android:textSize="@dimen/portrait_wide_subtitle"
+		android:fontFamily="sans-serif-light"
+		android:maxLines="1"
+		android:layout_alignParentRight="true"
+		android:layout_alignBottom="@+id/rating"
+		android:layout_marginRight="16dp"
+		tools:ignore="HardcodedText"/>
 
 	<TextView
-			android:id="@+id/rating"
-			android:text="***"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignLeft="@+id/title"
-			android:layout_alignBottom="@+id/thumb_wrapper"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:textColor="@color/light_secondry_text"
-			android:textSize="@dimen/portrait_wide_stars"
-			android:layout_marginBottom="10dp"
-			tools:ignore="HardcodedText,SpUsage"/>
+		android:id="@+id/rating"
+		android:text="***"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignLeft="@+id/title"
+		android:layout_alignBottom="@+id/thumb_wrapper"
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:textColor="@color/light_secondry_text"
+		android:textSize="@dimen/portrait_wide_stars"
+		android:layout_marginBottom="10dp"
+		tools:ignore="HardcodedText,SpUsage"/>
 
+	<!-- menu handle -->
 	<ImageButton
-			android:id="@+id/overflow"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/ic_overflow"
-			android:layout_alignParentTop="true"
-			android:layout_alignRight="@+id/runtime"
-			android:layout_alignEnd="@+id/runtime"
-			android:contentDescription="@string/more"
-			android:background="@android:color/transparent"
-			android:cropToPadding="false"
-			android:paddingTop="8dp" />
+		android:id="@+id/overflow"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/ic_overflow"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentRight="true"
+		android:layout_alignEnd="@+id/runtime"
+		android:contentDescription="@string/more"
+		android:background="@android:color/transparent"
+		android:cropToPadding="false"
+		android:paddingTop="4dp"
+		android:paddingRight="4dp"
+		android:focusable="false"
+		android:focusableInTouchMode="false" />
 
+	<RelativeLayout
+		android:background="@drawable/bg_selectable"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignBottom="@+id/thumb_wrapper"/>
+	
 </RelativeLayout>
