--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -27,8 +27,6 @@
 		android:numColumns="@integer/wide_list_numrows"
 		android:fastScrollEnabled="true"
 		android:fastScrollAlwaysVisible="true"
-		android:scrollbarStyle="outsideInset"
-		android:drawSelectorOnTop="true"
-		android:listSelector="@drawable/bg_selectable" />
+		android:scrollbarStyle="outsideInset" />
 
 </RelativeLayout>
